<resources>
    <string name="app_name">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="signin">Sign In</string>
    <string name="confirm_password">Confrim Password</string>
    <string name="login">Login</string>
    <string name="go_to_signup">GoTo SignUp Page</string>
</resources>