<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="231dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/design_default_color_primary_variant" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/design_default_color_primary_variant" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/black" />




    </LinearLayout>

    <Button
        android:id="@+id/signupgo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:padding="10dp"
        android:text="@string/go_to_signup"
        android:textColor="@color/black" />
</RelativeLayout>